camera_intel/log/build_2024-10-31_15-56-55/camera_intel/stderr.log
  File "/home/amir/camera_intel/install/camera_intel/lib/python3.10/site-packages/camera_intel/intel_pub.py", line 55
    
    ^
SyntaxError: expected 'except' or 'finally' block

